--- a/views/index.ejs
+++ b/views/index.ejs
@@ -58,7 +58,7 @@
             <span><small class="text-muted">teacherPassword</small></span>
             
             </div>
-            <span class="text-start"><small class="text-muted ">*You can also add students to the Sample Teacher by using the Class Id: 200.</small></span>
+            <p class="text-center"><small class="text-muted ">*Add Students to the Sample Teacher with Class ID: 200.</small></p>
          </div>
          
                </div>
