--- a/views/parent/profile.ejs
+++ b/views/parent/profile.ejs
@@ -92,7 +92,7 @@
                     <div
                         class="col-md-4 row text-center justify-content-center align-self-start"
                     >
-                        <h2>Students</h2>
+                        <h2 class="text-nowrap">Students</h2>
                         <div
                             class="row mb-3 "
                         >
@@ -109,7 +109,6 @@
                                     <%if(!selectedTest) {%> 
                                         
                                             <tr>
-                                                
                                                 <td>-</td>
                                             </tr>
                                       
@@ -130,7 +129,7 @@
                                     <%}%>
                                 </tbody>
                             </table>
-                            <small class="align-self-end">*last three (3) grades shown</small></td>
+                            <small class="align-self-end">*last three (3) grades shown</small>
                         </div>
                     </div>
                 </div>
