--- a/views/parent/signup.ejs
+++ b/views/parent/signup.ejs
@@ -38,6 +38,7 @@
                         <div class="mb-3">
                           <label for="childId" class="form-label">Child ID</label>
                           <input type="text" class="form-control" id="childId" name="childId">
+                          <div id="idHelp" class="form-text">Located on child profile.</div>
                         </div>
                         <div class="mb-3">
                           <label for="password" class="form-label">Password</label>
