--- a/views/student/profile.ejs
+++ b/views/student/profile.ejs
@@ -2,23 +2,23 @@
 <div class="container mt-5 bg-primary">
     <div class="row justify-content-center">
         <div class="m-5 card col-8 justify-content-center bg-info">
-            <div class="row justify-content-evenly  pt-2 bg-white">
-                <p class="col-4 align-self-center">
-                    <strong>User Name</strong>: <%= user.userName %>
-                </p>
-                <p class="col-4 align-self-center">
-                    <strong>User Id</strong>: <%= user.id.slice(-6) %>
-                </p>
-                <div
-                    class="col-4 d-flex row justify-content-center align-self-center  pt-1 pb-3"
-                >
-                    <a
-                        href="/logout"
-                        class="btn-sm btn btn-info justify-content-center col-6"
-                        >Logout</a
-                    >
+            <nav class="row navbar navbar-expand bg-light">
+                <div class="container-fluid">
+                
+                    <ul class=" col navbar-nav justify-content-around">
+                      <li class="nav-item ">
+                       User Name: <strong><%= user.userName %></strong>
+                      </li>
+                      <li class="nav-item ">
+                       User ID:  <strong><%= user.id.slice(-6) %></strong>
+                      </li>
+                      <li class="nav-item ">
+                         <a href="/logout" class="btn-sm btn btn-info">Logout</a>
+                      </li>
+                    </ul>
+                
                 </div>
-            </div>
+              </nav>
             <div class="mt-5 mb-5 card">
                 <div class="row justify-content-center align-self-center">
                     <div class="col-md-7 text-center row justify-content-center align-self-center"
@@ -93,7 +93,7 @@
                             <%}%>
                         </div>
                     </div>
-                    <div class="col-md-5 text-center row justify-content-start align-self-start"
+                    <div class="col-md-5 text-center row justify-content-center align-self-start"
                     >
                         <h2>Grades</h2>
                         <div class="row mb-3">
@@ -102,7 +102,7 @@
                             <%}else if(selectedTest.title){%>
                             <p class="text-center fs-5">
                                 <%=selectedTest.title%></p>
-                            <table>
+                            <table class="table table-sm mt-3">
                                 <thead>
                                     <tr>
                                         <td>Attempt</td>
