--- a/views/teacher/profile.ejs
+++ b/views/teacher/profile.ejs
@@ -2,17 +2,23 @@
 <div class="container mt-5 bg-primary">
     <div class="row justify-content-center">
         <div class="m-5 card col-8 justify-content-center bg-info">
-            <div class="row bg-white justify-content-evenly">
-                <p class="col-4">
-                    <strong>User Name</strong>: <%= user.userName %>
-                </p>
-
-                <div
-                    class="col-4 d-flex row justify-content-center align-items-center"
-                >
-                    <a href="/logout" class="btn-sm btn btn-info">Logout</a>
+            <nav class="row navbar navbar-expand bg-light">
+                <div class="container-fluid">
+                
+                    <ul class=" col navbar-nav justify-content-around">
+                      <li class="nav-item ">
+                       User Name: <strong><%= user.userName %></strong>
+                      </li>
+                      <li class="nav-item ">
+                       User ID:  <strong><%= user.id.slice(-6) %></strong>
+                      </li>
+                      <li class="nav-item ">
+                         <a href="/logout" class="btn-sm btn btn-info">Logout</a>
+                      </li>
+                    </ul>
+                
                 </div>
-            </div>
+              </nav>
             <div class="mt-5 mb-5 card">
                 <div class="row justify-content-center align-self-center">
                     <div
@@ -90,18 +96,18 @@
                     <div
                         class="col-md-4 text-center row justify-content-start align-self-start"
                     >
-                        <h2>Students</h2>
+                        <h2 class="text-nowrap">Students</h2>
                         <div
                             class="row mb-3 "
                         >
                             <% if(testResults.length == 0){%>
                                 <p>No Students</p>
                             <%} else {%>
-                                <table>
-                                <thead class=" ">
+                                <table class="table table-sm mt-3">
+                                <thead>
                                     <tr class="justify-content-start">
-                                        <td>Name</td>
-                                        <td>Grade</td>
+                                        <td colspan="2" class="fs-5">Name</td>
+                                        <td colspan="3" class="fs-5">Grades*</td>
                                     </tr>
                                 </thead>
                                 <tbody>
@@ -109,15 +115,14 @@
                                         <% for(let i = 0; i< students.length; i++) {%>
                                             <tr>
                                                 <td><%= students[i].userName %></td>
-                                                <td>-</td>
                                             </tr>
                                         <%}%>
                                     <%} else {%> 
                                         <%for(let i =0; i< testResults.length;i++){%>
                                              <tr>
-                                                <td><%= students[i].userName %></td>
+                                                <td colspan="2"><%= students[i].userName %></td>
                                             <%if(testResults[i][0]!= undefined){%>
-                                                <%for(let j = 0;j< testResults[i][0].grades.length;j++){%>
+                                                <%for(let j = testResults[i][0].grades.length-1; j>=0 && j>= testResults[i][0].grades.length-3; j--){%>
                                                     <%if(testResults[i][0].grades[j].test== selectedTest.title){%>
                                                        
                                                             <td>
@@ -128,7 +133,7 @@
 
                                                 <%}%>
                                             <%} else {%>
-                                            <td>-</td>
+                                            
                                             <%}%>
                                         </tr>
                                         <%}%>
@@ -138,6 +143,7 @@
                                 </tbody>
                                 </table>
                             <%}%>
+                            <small class="align-self-end">*last three (3) grades shown</small></td>
                         </div>
                     </div>
                 </div>
