--- a/views/teacher/signup.ejs
+++ b/views/teacher/signup.ejs
@@ -5,7 +5,7 @@
           <div class=" row justify-content-center align-self-center ">
             <div class="col-md-5 col-sm-5 card-header d-flex row align-items-center justify-content-center bg-info">
               <div>
-                <img src="/imgs/error.png" class="img-fluid" alt="teacher sign-in image">
+                <img src="/imgs/teacher1.png" class="img-fluid" alt="teacher sign-in image">
                 <h3 class="card-title text-center">Teacher SignUp</h3>
               </div>
             </div>
