center student card demo text on home page

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,6 +1,6 @@
 <%- include('partials/header') -%>
 
-<main class="row m-5 justify-content-center  ">
+<main class=" row m-5 justify-content-center ">
   <div class=" m-3  ">
      <div class=" row p-3 justify-content-center bg-primary rounded">
         <h2 class="text-white mt-3">Welcome</h2>
@@ -19,8 +19,8 @@
   </div>   
 </main>
 
-<div class="row m-4 justify-content-center bg-primary">
-   <div class=" p-4  text-white">
+<div class=" m-4 justify-content-center bg-primary ">
+   <div class=" p-4  text-white ">
       <h3 class="text-center fs-4"><span class="fw-bold">SpellWell</span>  is a spelling application designed for students, teachers, and parents.</h3>
       <div class="m-3">
          <h4>How It Works</h4>
@@ -33,8 +33,8 @@
                   <img src="/imgs/student.png" class="card-img-top img-fluid mt-3" alt="cartoon of a little girl in a computer">
                   <div class="card-body text-start">
                      <h5 class="text-center text-white">Students</h5>
-                     <p class="text-full">Students can take and get the results of spelling tests added by their teacher.</p>
-                     <div class=" card-footer bg-transparent row justify-content-center align-items-center">
+                     <p class="card-text">Students can take and get the results of spelling tests added by their teacher.</p>
+                     <div class=" card-footer bg-transparent row justify-content-center align-items-center text-center">
                         <h6 class="card-title text-center col"><small class="text-muted fw-bold">Demo Login</small></h6>
                         <span><small class="text-muted ">Username:</small></span>
                         <span><small class="text-muted">sample@student.com</small></span>
