add footer and format

--- a/views/parent/signup.ejs
+++ b/views/parent/signup.ejs
@@ -1,7 +1,7 @@
 <%- include('../partials/header') -%>
-    <main class="container mt-5 bg-primary">
+    <main class=" m-5 bg-primary rounded">
       <div class="row justify-content-center align-self-center">
-        <div class="m-5 card col-8 row justify-content-center align-self-center p-0">
+        <div class="m-5 card col-8 row justify-content-center align-self-center p-0 shadow">
           <div class=" row justify-content-center align-self-center ">
             <div class="col-md-5 col-sm-5 card-header d-flex row align-items-center justify-content-center bg-info">
               <div>
