--- a/views/student/profile.ejs
+++ b/views/student/profile.ejs
@@ -1,7 +1,7 @@
 <%- include('../partials/header') -%>
-<div class="container mt-5 bg-primary">
+<div class=" m-5 bg-primary rounded">
     <div class="row justify-content-center">
-        <div class="m-5 card col-8 justify-content-center bg-info">
+        <div class="m-5 card col-8 justify-content-center bg-info shadow">
             <nav class="row navbar navbar-expand bg-light">
                 <div class="container-fluid">
                 
