--- a/views/tests/test.ejs
+++ b/views/tests/test.ejs
@@ -1,8 +1,8 @@
 <%- include('../partials/header') -%>
-<main class="container mt-5 bg-primary">
+<main class=" m-5 bg-primary rounded">
     <div class="row justify-content-center">
         <h3 class="text-white text-center mt-3"><%=test.title%> Test</h3>
-        <div class=" card col-10 row mx-5 mt-3 mb-5 justify-content-center align-self-center">
+        <div class=" card col-10 row mx-5 mt-3 mb-5 justify-content-center align-self-center shadow">
             <form method="POST"autocomplete="off" class="row justify-content-center align-self-center text-center">
                  <p class="fs-5 mt-2">Press the <span><i class="fas fa-play-circle"></i></span> button to hear the spelling word. Then type the word in the space. </p>
                 <div class="card col-10 row bg-info mx-5 mt-2 align-self-center">
