--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,8 +1,8 @@
 <%- include('partials/header') -%>
-<main class="container mt-5 bg-primary ">
+<main class=" m-5 bg-primary rounded">
   <div class="row justify-content-center">
     <div class=" row col-12 text-center justify-content-center">
-      <div class=" card m-5 col-6 ">
+      <div class=" card m-5 col-6 shadow">
         <div class=" card-header bg-info row justify-content-center">
           <p class="card-title fs-3 text-white">Login</p>
           <div class=" col-6 align-items-center justify-content-center">
