--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -3,12 +3,16 @@
     <head>
         <meta charset="UTF-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+        <meta charset="UTF-8">
+        <meta name="description" content="SpellWell is a spelling application designed for students, teachers, and parents.">
+        <meta name="keywords" content="Spelling, Education, Homeschool, Study">
+        <meta name="author" content="InstincDev">
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>SpellWell</title>
         <link rel="apple-touch-icon" sizes="180x180" href="/imgs/apple-touch-icon.png">
-<link rel="icon" type="image/png" sizes="32x32" href="/imgs/favicon.ico">
-<link rel="icon" type="image/png" sizes="16x16" href="/imgs/favicon.ico">
-<link rel="manifest" href="/imgs/site.webmanifest">
+        <link rel="icon" type="image/png" sizes="32x32" href="/imgs/favicon.ico">
+        <link rel="icon" type="image/png" sizes="16x16" href="/imgs/favicon.ico">
+        <link rel="manifest" href="/imgs/site.webmanifest">
         <link
             href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css"
             rel="stylesheet"
