--- a/views/student/signup.ejs
+++ b/views/student/signup.ejs
@@ -1,7 +1,7 @@
 <%- include('../partials/header') -%>
-    <main class="container mt-5 bg-primary">
+    <main class=" m-5 bg-primary rounded">
       <div class="row justify-content-center">
-        <div class="m-5 card col-8 row justify-content-center">
+        <div class="m-5 card col-8 row justify-content-center shadow">
             <div class="row justify-content-around">
               <div class="col-md-5 col-sm-5 card-header d-flex row align-items-center justify-content-center bg-info">
                 <div>
