--- a/views/teacher/add_test.ejs
+++ b/views/teacher/add_test.ejs
@@ -1,8 +1,8 @@
 <%- include('../partials/header') -%>
-<div class="container mt-5 bg-primary">
+<div class=" m-5 bg-primary rounded">
     <div class="row justify-content-center">
         <h3 class="text-white text-center mt-3">Add New Test</h3>
-        <div class="card col-10 row m-5 justify-content-center align-self-center">
+        <div class="card col-10 row m-5 justify-content-center align-self-center shadow">
             <form action="/teacher/create_test" method="POST" class="row justify-content-center align-self-center text-center">
                 <div class="card col-10 row bg-info mx-5 mt-5 align-self-center text-center">
                     <div class="row mt-3 input-field align-self-center justify-content-center">
