--- a/views/tests/results.ejs
+++ b/views/tests/results.ejs
@@ -1,8 +1,8 @@
 <%- include('../partials/header') -%>
-<main class="container mt-5 bg-primary">
+<main class=" m-5 bg-primary rounded">
     <div class="row justify-content-center align-self-center ">
         <h3 class="text-white">Test name: <%=test.title%></h3>
-        <div class=" card mt-3 col-8 row mb-5 pb-3 justify-content-center align-self-center">
+        <div class=" card mt-3 col-8 row mb-5 pb-3 justify-content-center align-self-center shadow">
             <h2>Grade: <%=grade%> / 100</h2>
             <div class="text-center row justify-content-center align-self-center mb-3">
         
