moved imgs to cloudinary

--- a/views/errors/404.ejs
+++ b/views/errors/404.ejs
@@ -5,7 +5,7 @@
      <div class=" row m-3 justify-content-center bg-primary">
         <h2 class="text-white mt-3">404 </h2>
         <div class=" col-6 mb-3">
-           <img src="/imgs/error.png" alt="error image" class="img-fluid"> 
+           <img src="https://res.cloudinary.com/instincdev/image/upload/v1667348501/teacher1_z8pxhe.png" alt="error image" class="img-fluid"> 
         </div>
          <p class="text-center text-white fs-4">Page Not Found</p>
       </div>  
