--- a/views/index.ejs
+++ b/views/index.ejs
@@ -5,7 +5,7 @@
      <div class=" row p-3 justify-content-center bg-primary rounded">
         <h2 class="text-white mt-3">Welcome</h2>
         <div class=" col-6 mb-3">
-           <img src="/imgs/spellwell.png" alt="home image" class="img-fluid"> 
+           <img src="https://res.cloudinary.com/instincdev/image/upload/v1667348263/spellwell_kqgpai.png" alt="home image" class="img-fluid"> 
         </div>
          <p class="text-center text-white fs-4">I am a ...</p>
       </div>  
@@ -30,7 +30,7 @@
          <div class=" row btn-group ms-2 me-2 justify-content-center  gap-3">
             <a href="/student/signup" class=" col-md-3 btn btn-info shadow rounded ">
                <div class=" bg-transparent ">
-                  <img src="/imgs/student.png" class="card-img-top img-fluid mt-3 " alt="cartoon of a little girl in a computer">
+                  <img src="https://res.cloudinary.com/instincdev/image/upload/v1667348266/student_t1unxo.png" class="card-img-top img-fluid mt-3 " alt="cartoon of a little girl in a computer">
                   <div class="card-body text-start">
                      <h5 class="text-center text-white">Students</h5>
                      <p class="card-text">Students can take and get the results of spelling tests added by their teacher.</p>
@@ -46,7 +46,7 @@
             </a>
             <a href="/teacher/signup" class="col-md-3 btn btn-info shadow rounded">
                <div class=" bg-transparent">
-         <img src="/imgs/teacher1.png" class="card-img-top img-fluid mt-3" alt="cartoon of a teacher in a computer">
+         <img src="https://res.cloudinary.com/instincdev/image/upload/v1667348501/teacher1_z8pxhe.png" class="card-img-top img-fluid mt-3" alt="cartoon of a teacher in a computer">
          <div class="card-body text-start">
            <h5 class="card-title text-center text-white">Teachers</h5>
            <p class="card-text">Teachers can create new tests, and access the results for all their students.</p>
@@ -66,7 +66,7 @@
 
             <a href="/parent/signup" class="col-md-3 btn btn-info shadow rounded">
                <div class="bg-transparent">
-         <img src="/imgs/parent.png" class="card-img-top img-fluid mt-3" alt="cartoon of a parent and child with backpack">
+         <img src="https://res.cloudinary.com/instincdev/image/upload/v1667348261/parent_afi7hd.png" class="card-img-top img-fluid mt-3" alt="cartoon of a parent and child with backpack">
          <div class="card-body">
            <h5 class="card-title text-white">Parents / Guardians</h5>
            <p class="card-text text-start">Parents / Guardians can access the test results of their child(ren).</p>
