--- a/views/login.ejs
+++ b/views/login.ejs
@@ -6,7 +6,7 @@
         <div class=" card-header bg-info row justify-content-center">
           <p class="card-title fs-3 text-white">Login</p>
           <div class=" col-6 align-items-center justify-content-center">
-            <img src="/imgs/teacher.png" alt="" class="img-fluid">
+            <img src="https://res.cloudinary.com/instincdev/image/upload/v1667348460/teacher_bhduys.png" alt="" class="img-fluid">
           </div>
           
        
