--- a/views/parent/signup.ejs
+++ b/views/parent/signup.ejs
@@ -5,7 +5,7 @@
           <div class=" row justify-content-center align-self-center ">
             <div class="col-md-5 col-sm-5 card-header d-flex row align-items-center justify-content-center bg-info">
               <div>
-                <img src="/imgs/parent.png" class="img-fluid" alt="teacher sign-in image">
+                <img src="https://res.cloudinary.com/instincdev/image/upload/v1667348261/parent_afi7hd.png" class="img-fluid" alt="teacher sign-in image">
                 <h3 class="card-title text-center">Parent SignUp</h3>
               </div>
             </div>
