--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -9,10 +9,10 @@
         <meta name="author" content="InstincDev">
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>SpellWell</title>
-        <link rel="apple-touch-icon" sizes="180x180" href="/imgs/apple-touch-icon.png">
-        <link rel="icon" type="image/png" sizes="32x32" href="/imgs/favicon.ico">
-        <link rel="icon" type="image/png" sizes="16x16" href="/imgs/favicon.ico">
-        <link rel="manifest" href="/imgs/site.webmanifest">
+        <link rel="apple-touch-icon" sizes="180x180" href="https://res.cloudinary.com/instincdev/image/upload/v1667348383/apple-touch-icon_wjvorb.png">
+        <link rel="icon" type="image/png" sizes="32x32" href="https://res.cloudinary.com/instincdev/image/upload/v1667348379/favicon_touxxs.ico">
+        <link rel="icon" type="image/png" sizes="16x16" href="https://res.cloudinary.com/instincdev/image/upload/v1667348379/favicon_touxxs.ico">
+        <link rel="manifest" href="https://res.cloudinary.com/instincdev/raw/upload/v1667348392/site_pr4mvp.webmanifest">
         <link
             href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css"
             rel="stylesheet"
