--- a/views/student/signup.ejs
+++ b/views/student/signup.ejs
@@ -5,7 +5,7 @@
             <div class="row justify-content-around">
               <div class="col-md-5 col-sm-5 card-header d-flex row align-items-center justify-content-center bg-info">
                 <div>
-                  <img src="/imgs/student.png" class="img-fluid width" alt="student sign-in image">
+                  <img src="https://res.cloudinary.com/instincdev/image/upload/v1667348266/student_t1unxo.png" class="img-fluid width" alt="student sign-in image">
                   <h3 class="card-title text-center">Student SignUp</h3>
                 </div>
               </div>
