add demo info to student signup

--- a/views/student/signup.ejs
+++ b/views/student/signup.ejs
@@ -7,6 +7,14 @@
                 <div>
                   <img src="https://res.cloudinary.com/instincdev/image/upload/v1667348266/student_t1unxo.png" class="img-fluid width" alt="student sign-in image">
                   <h3 class="card-title text-center">Student SignUp</h3>
+                  <div class=" card-footer bg-transparent row justify-content-center align-items-center text-center">
+                    <h6 class="card-title text-center col"><small class="text-muted fw-bold">Demo Login</small></h6>
+                    <span><small class="text-muted ">Username:</small></span>
+                    <span><small class="text-muted">sample@student.com</small></span>
+                    <span><small class="text-muted">Password:</small></span>
+                    <span><small class="text-muted">studentPassword</small></span>
+                 </div>
+                 <p class="text-center"><small class="text-muted ">*Add Students to the Sample Teacher with Class ID: 200.</small></p>
                 </div>
               </div>
               <div class="col-md-7 col-sm-8 card-body row text-center justify-content-center">
