add demo login to teacher signup

--- a/views/teacher/signup.ejs
+++ b/views/teacher/signup.ejs
@@ -7,6 +7,15 @@
               <div>
                 <img src="https://res.cloudinary.com/instincdev/image/upload/v1667348501/teacher1_z8pxhe.png" class="img-fluid" alt="teacher sign-in image">
                 <h3 class="card-title text-center">Teacher SignUp</h3>
+                <div class=" card-footer bg-transparent row justify-content-center text-center">
+                  <h6 class="card-title  col-12"><small class="text-muted fw-bold">Demo Login</small></h6>
+                  <span><small class="text-muted ">Username:</small></span>
+                  <span><small class="text-muted ">sample@teacher.com</small></span>
+                  <span><small class="text-muted">Password:</small></span>
+                  <span><small class="text-muted">teacherPassword</small></span>
+                  
+                  </div>
+                  <p class="text-center"><small class="text-muted ">*Add Students to the Sample Teacher with Class ID: 200.</small></p>
               </div>
             </div>
             <div class="col-md-7 card-body row text-center justify-content-center align-self-center">
@@ -38,6 +47,7 @@
                         <div class="mb-3">
                           <label for="password" class="form-label">Password</label>
                           <input type="password" class="form-control" id="password" name="password">
+                          
                         </div>
                         <div class="mb-3">
                             <label for="confirmPassword" class="form-label">Confirm Password</label>
