--- a/views/parent/signup.ejs
+++ b/views/parent/signup.ejs
@@ -7,6 +7,13 @@
               <div>
                 <img src="https://res.cloudinary.com/instincdev/image/upload/v1667348261/parent_afi7hd.png" class="img-fluid" alt="teacher sign-in image">
                 <h3 class="card-title text-center">Parent SignUp</h3>
+                <div class=" card-footer bg-transparent row justify-content-center text-center">
+                  <h6 class="card-title text-center col-12"><small class="text-muted fw-bold">Demo Login</small></h6>
+                  <span><small class="text-muted ">Username:</small></span>
+                  <span><small class="text-muted ">sample@parent.com</small></span>
+                  <span><small class="text-muted">Password:</small></span><span><small class="text-muted">parentPassword</small></span>
+                  </div>
+                  <p class="text-center"><small class="text-muted ">*Add Students to the Sample Teacher with Class ID: 200.</small></p>
               </div>
             </div>
             <div class="col-md-7 card-body row text-center justify-content-center align-self-center">
